--- a/tr/index.html
+++ b/tr/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Le Vauge | Ana Səhifə</title>
+    <title>Le Vauge | Ana sayfa</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/favicon.ico">
@@ -31,7 +31,7 @@
                 <div class="col-12">
                     <div class="search-content">
                         <form action="#" method="get">
-                            <input type="search" name="search" id="search" placeholder="Nə axtarırsınız?">
+                            <input type="search" name="search" id="search" placeholder="Type what you want to search">
                             <button type="submit"><img src="../img/core-img/search.png" alt=""></button>
                         </form>
                     </div>
@@ -69,23 +69,23 @@
             <!-- Amado Nav -->
             <nav class="amado-nav">
                 <ul>
-                    <li class="active"><a href="index.html">Ana Səhifə</a></li>
-                    <li id="categories"><a href="#" onclick="opensubmenu();">Kateqoriyalar</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li id="categories"><a href="#" onclick="opensubmenu();">Categories</a></li>
                     <ul id="subcategories" style="display: none;padding-left:14%;">
-                            <li ><a href="#">Heyvanlar üçün</a></li>
-                            <li><a href="#">Uşaqlar üçün</a></li>
-                            <li><a href="#">Bədən üçün</a></li>
-                            <li><a href="#">Gigyenik məhsullar</a></li>
-                            <li><a href="#">Ev üçün</a></li>
+                            <li ><a href="#">Animals</a></li>
+                            <li><a href="#">Babies</a></li>
+                            <li><a href="#">Body</a></li>
+                            <li><a href="#">Fermented Hygenic</a></li>
+                            <li><a href="#">For Home</a></li>
                         </ul>
-                    <li><a href="aboutus.html">Haqqımızda</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
                 </ul>
                 <div class="mt-3">
-                        <a href="../az/index.html" style="display:inline-block; width:20%"><img src="../img/icon/197512.svg" class="mr-2"/></a>
-                        <a href="../tr/index.html" style="display:inline-block; width:20%"><img src="../img/icon/turkey.svg" class="mr-2"/></a>  
-                        <a href="../en/index.html" style="display:inline-block; width:20%"><img src="../img/icon/english.svg" class="mr-2"/> </a>
-                        <a href="../ru/index.html" style="display:inline-block; width:20%"><img src="../img/icon/russian.svg" class="mr-2"/></a> 
-                    </div>
+                    <a href="../az/index.html" style="display:inline-block; width:20%"><img src="../img/icon/197512.svg" class="mr-2"/></a>
+                    <a href="../tr/index.html" style="display:inline-block; width:20%"><img src="../img/icon/turkey.svg" class="mr-2"/></a>  
+                    <a href="../en/index.html" style="display:inline-block; width:20%"><img src="../img/icon/english.svg" class="mr-2"/> </a>
+                    <a href="../ru/index.html" style="display:inline-block; width:20%"><img src="../img/icon/russian.svg" class="mr-2"/></a> 
+                </div>
             </nav>
           
             <!-- Cart Menu -->
@@ -112,7 +112,7 @@
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
-                            <h4 class="text-white">Heyvanlar üçün</h4>
+                            <h4 class="text-white">For Animals</h4>
                         </div>
                     </a>
                 </div>
@@ -124,7 +124,7 @@
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
-                            <h4>Uşaqlar üçün</h4>
+                            <h4>For Babies</h4>
                         </div>
                     </a>
                 </div>
@@ -136,7 +136,7 @@
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
-                            <h4 class="text-white">Bədən üçün</h4>
+                            <h4 class="text-white">For Body</h4>
                         </div>
                     </a>
                 </div>
@@ -148,7 +148,7 @@
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
-                            <h4 class="text-white">Gigyenik məhsullar</h4>
+                            <h4 class="text-white">Fermented Hygenic Products</h4>
                         </div>
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
-                            <h4>Ev üçün</h4>
+                            <h4>For Home</h4>
                         </div>
                     </a>
                 </div>
@@ -178,15 +178,15 @@
                 <!-- Newsletter Text -->
                 <div class="col-12 col-lg-6 col-xl-7">
                     <div class="newsletter-text mb-100">
-                        <h2>Yeni məhsullardan <span>xəbərdar ol</span></h2>
+                        <h2>Subscribe us for <span>New Products</span></h2>
                     </div>
                 </div>
                 <!-- Newsletter Form -->
                 <div class="col-12 col-lg-6 col-xl-5">
                     <div class="newsletter-form mb-100">
                         <form action="#" method="post">
-                            <input type="email" name="email" class="nl-email" placeholder="Sizin Email">
-                            <input type="submit" value="Abunə ol">
+                            <input type="email" name="email" class="nl-email" placeholder="Your E-mail">
+                            <input type="submit" value="Subscribe">
                         </form>
                     </div>
                 </div>
@@ -220,13 +220,13 @@
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="index.html">Ana Səhifə</a>
+                                            <a class="nav-link" href="index.html">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#categories">Kateqoriyalar</a>
+                                            <a class="nav-link" href="#categories">Categories</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Haqqımızda</a>
+                                            <a class="nav-link" href="#">About us</a>
                                         </li>
                                     </ul>
                                 </div>
