--- a/ru/products.html
+++ b/ru/products.html
@@ -79,13 +79,8 @@
                             <li><a href="#">For Home</a></li>
                         </ul>
                     <li><a href="#">About us</a></li>
+                    <li class="mt-3"><img src="../img/icon/197512.svg" width="15%" class="mr-2" onclick="changelanguage('az')" style="cursor:pointer;"/><img src="../img/icon/turkey.svg" style="cursor:pointer;" width="15%" class="mr-2" onclick="changelanguage('tr')"/>  <img src="../img/icon/english.svg" style="cursor:pointer;" width="15%" class="mr-2" onclick="changelanguage('en')"/> <img src="../img/icon/russian.svg" width="15%" class="mr-2" onclick="changelanguage('ru')" style="cursor:pointer;"/> </li>
                 </ul>
-                <div class="mt-3">
-                        <a href="../az/products.html" style="display:inline-block; width:20%"><img src="../img/icon/197512.svg" class="mr-2"/></a>
-                        <a href="../tr/products.html" style="display:inline-block; width:20%"><img src="../img/icon/turkey.svg" class="mr-2"/></a>  
-                        <a href="../en/products.html" style="display:inline-block; width:20%"><img src="../img/icon/english.svg" class="mr-2"/> </a>
-                        <a href="../ru/products.html" style="display:inline-block; width:20%"><img src="../img/icon/russian.svg" class="mr-2"/></a> 
-                    </div>
             </nav>
           
             <!-- Social Button -->
